--- a/dojo/templates/base.html
+++ b/dojo/templates/base.html
@@ -1169,8 +1169,8 @@
                         <div class="col-md-12 text-center text-">
                             <p>
                                 <a href="{% url 'home' %}">
-                                    <img class="logo" src="{% static " dojo/img/chop.png" %}" alt="{% trans " DefectDojo
-                                        Chop" %}" height="45" />
+                                    <img class="logo" src="{% static 'dojo/img/chop.png' %}"
+                                        alt="{% trans 'DefectDojo Chop' %}" height="45" />
                                 </a>
                                 <br />
                                 <br />
